--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
     {
       "name": "Franz Holzinger",
       "role": "Developer",
-      "homepage": "http://ttproducts.de"
+      "homepage": "https://ttproducts.de"
     }
   ],
   "license": [
-    "GPL-2.0+"
+    "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": ">=7.6.0,<8.99.99"
+    "typo3/cms-core": ">=7.6.0,<9.99.99"
   },
   "autoload": {
     "psr-4": {
@@ -30,7 +30,7 @@
     }
   },
   "replace": {
-    "import": "self.version",
+    "jambagecom/import": "self.version",
     "typo3-ter/import": "self.version"
   },
   "extra": {
