--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": "^8.7, ^9.5"
+    "typo3/cms-core": "^8.7 || ^9.5"
   },
   "suggest": {
     "typo3/cms-scheduler": "^8.7, ^9.5",
@@ -35,7 +35,7 @@
     }
   },
   "replace": {
-    "jambagecom/import": "self.version"
+    "typo3-ter/import": "self.version"
   },
   "extra": {
     "typo3/cms": {
